2015-10-28  Uwe Schulzweida

	* using CDI library version 1.7.0
	* Version 1.7.0 released

2015-05-28  Uwe Schulzweida

	* Remap: fixed memory leak for r=max_remaps-1

2015-05-26  Uwe Schulzweida

	* New operator: vertstd1  - Vertical standard deviation [Divisor is (n-1)]
	* New operator: vertvar1  - Vartical variance [Divisor is (n-1)]
	* New operator: gridboxstd1 - Gridbox standard deviation [Divisor is (n-1)]
	* New operator: gridboxvar1 - Gridbox variance [Divisor is (n-1)]
	* New operator: merstd1  - Meridional standard deviation [Divisor is (n-1)]
	* New operator: mervar1  - Meridional variance [Divisor is (n-1)]
	* New operator: zonstd1  - Zonal standard deviation [Divisor is (n-1)]
	* New operator: zonvar1  - Zonal variance [Divisor is (n-1)]

2015-05-22  Uwe Schulzweida

	* New operator: yseasvar1  - Multi-year seasonally variance [Divisor is (n-1)]
	* New operator: yseasstd1  - Multi-year seasonally standard deviation [Divisor is (n-1)]
	* New operator: seasvar1  - Seasonal variance [Divisor is (n-1)]
	* New operator: seasstd1  - Seasonal standard deviation [Divisor is (n-1)]

2015-05-21  Uwe Schulzweida

	* after: extent incomming GEOPOTHEIGHT on full 3d hybrid levels to half 3d hybrid levels (bug fix)

2015-05-19  Uwe Schulzweida

        * Fldstat2: added support for option --reduce_dim

2015-05-18  Uwe Schulzweida

        * splityear*: support for constant fields is missing [Bug #5759]

2015-05-17  Uwe Schulzweida

	* env. CDO_TIMESTAT_DATE does not work [Bug #5758]

2015-05-02  Uwe Schulzweida

	* sqr: added support for complex numbers

2015-05-01  Uwe Schulzweida

	* masklonlatbox: added support for curvilinear grids

2015-04-29  Uwe Schulzweida

	* remapbil: optimized version without weights

2015-04-28  Uwe Schulzweida

	* selgrid: added parameter type var=varname to select all variables with the same grid as varname

2015-04-28  Uwe Schulzweida

	* using CDI library version 1.6.9
	* Version 1.6.9 released
	* clipping: update to YAC version 1.0.3